# MAGI

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  design-draft.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  auth.py  config.py  demo.py  main.py  realtime.py
backend/cache/: redis.py
backend/enrichment/: censys.py  http.py  models.py  notify.py  pipeline.py  scoring.py  virustotal.py
backend/enrichment/feeds/: base.py  emerging.py  feodo.py
backend/graph/: driver.py  ingest.py  prune.py  queries.py  schema.py
backend/routers/: auth.py  graph.py  health.py  ws.py
collectors/linux/: ebpf_collector.py  ebpf_probes.c
collectors/shared/: queue.py  runtime.py  schema.py
collectors/windows/: sysmon_collector.py  sysmon_config.xml
frontend/: .dockerignore  .env.example  .npmrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  LoginPage.tsx
frontend/src/graph/: LogTrail.tsx  ThreatGraph.tsx  colorMap.ts  notifications.ts  types.ts  useWsGraph.ts
frontend/src/ui/: DockPanel.tsx  hooks.ts
frontend/tests/e2e/: login.spec.ts
keys/: public.pem
scripts/: neo4j_backup.sh
tests/integration/: test_campaign_bridge.py  test_ingest_dedup.py
tests/unit/: test_api.py  test_auth.py  test_config.py  test_demo.py  test_enricher_parsing.py  test_event_hash.py  test_feed_parsing.py  test_ingest.py  test_linux_parser.py  test_pipeline.py  test_prune.py  test_queue.py  test_realtime.py  test_redis_keys.py  test_schema.py  test_scoring.py  test_sysmon_parser.py
